# budget-buddy-api/src/main/java/com/yassir/budgetbuddy/auth/AuthenticationController.java
@@ -1,11 +1,18 @@
 package com.yassir.budgetbuddy.auth;
+import com.yassir.budgetbuddy.user.User;
+import com.yassir.budgetbuddy.user.service.UserService;
+import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.mail.MessagingException;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.*;
+
+import java.security.Principal;
+import java.util.Optional;
 
 @RestController
 @RequestMapping("auth")
@@ -14,6 +21,7 @@ import org.springframework.web.bind.annotation.*;
 public class AuthenticationController {
 
     private  final AuthenticationService service;
+    private final UserService userService;
 
     @PostMapping("/register")
     @ResponseStatus(HttpStatus.ACCEPTED)
@@ -36,5 +44,21 @@ public class AuthenticationController {
         service.activateAccount(token);
     }
 
+
+    @GetMapping("/connected-user")
+    public ResponseEntity<Optional<UserResponse>> getConnectedUser(Authentication connectedUser) {
+        Optional<User> user = userService.getConnectedUser(connectedUser);
+        if (user.isPresent()){
+            UserResponse userResponse = UserResponse.builder()
+                    .id(user.get().getId())
+                    .email(user.get().getEmail())
+                    .firstName(user.get().getFirstName())
+                    .lastName(user.get().getLastName())
+                    .role(user.get().getRoles().get(0).getName())
+                    .build();
+            return ResponseEntity.ok(Optional.ofNullable(userResponse));
+        }
+        return ResponseEntity.ok(Optional.empty());
+    }
 
 }
