# budget-buddy-api/src/main/java/com/yassir/budgetbuddy/auth/UserResponse.java
@@ -1,0 +1,17 @@
+package com.yassir.budgetbuddy.auth;
+
+
+import lombok.*;
+
+@Getter
+@Setter
+@AllArgsConstructor
+@NoArgsConstructor
+@Builder
+public class UserResponse {
+    private Integer id;
+    private String email;
+    private String firstName;
+    private String lastName;
+    private String role;
+}
